# CSChat

./: CMakeLists.txt  README.md  build.txt  tack.txt  task.txt
Client/: CMakeLists.txt  CSSuportCmd.h  CSchat.h  client_pch.h  task.txt
Client/chat/: A1.txt  A2.txt
Client/include/: CSChat.h  CSHead.h  CSNameList.h  CSRenderTexture.h  CSSlider.h  CSTextRender.h  CSTypingWindow.h  pch.h
Client/lib/: sfml-main.lib
Client/src/: main.cpp
Server/: CMakeLists.txt  CSClients.h  CSTicket.h  server_pch.h
Server/include/: CSCard.h  CSClients.h  CSTicket.h
Server/src/: main.cpp
_network_module/: CSClient.h  CSPacket.h  CSServer.h  Generals.h  pch_network_modul.h
doc/: CSChat_cmp.txt  CSLib.txt
include/: CSLog.h  CSPacket.h  CSReciver.h  CSSuportCmd.h  pch_network_modul.h
test/: log.h
tests/: Client-Server_chat.cpp  Client.cpp  Server-Client_chat.cpp  Server.cpp  cli.bat  ser.bat
tests/Server/: CSCard-test.cpp
tests/_network_module/: CSClient_test.cpp  CSPacket-test.cpp  CSReciver-test.cpp  CSServer-test.cpp
